styles page change

--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
 
 <body>
     <h1>Hello Welcome to GitHub </h1>
+    <div class="contact-form">
+        <h1>Registration </h1>
+    </div>
+    <div class="contact-us">
+        <form action="savedata.php" method="post">
+            <input type="text" name="forceno" class="form-control" placeholder="Enter First Name" require> <br>
+            <input type="text" name="unit" class="form-control" placeholder="Enter last Name"> <br>
+            <input type="text" name="ocname" class="form-control" placeholder="Enter Email"> <br>
+            <input type="text" name="mothername" class="form-control" placeholder="Enter Mother"> <br>
+            <input type="text" name="fathername" class="form-control" placeholder="Enter Father"> <br>
+            <input type="text" name="chm" class="form-control" placeholder="Enter CHM"> <br>
+            <input type="text" name="reason" class="form-control" placeholder="Enter Reason"> <br>
+
+
+
+            <input type="submit" class="form-control submit" value="submit">
+        </form>
+    </div>
 </body>
 
 </html>
