styles page change

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <input type="submit" class="form-control submit" value="submit">
         </form>
     </div>
+    <h2>Thanku</h2>
 </body>
 
 </html>
